--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -22,7 +22,7 @@ $hamburger-hover-transition-timing-function: linear !default;
     top: 0px;
     display: flex;
     justify-content: flex-start;
-    height: 100%;
+    // height: 100%;
     z-index: 2;
     .nav-button{
 
